Fix About link reference and enhance Clear Cart button visibility

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ h2 {
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
+  border-radius: 25px;
 }
 
 .shop-info {
